--- a/app/views/clockings/new.html.erb
+++ b/app/views/clockings/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', clocking: @clocking %>
 
-<%= link_to 'Back', clockings_path %>
+<%= link_to 'Back', subject_clockings_path(@subject) %>
