--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -20,5 +20,5 @@
 <% end %>
 
 <%= link_to 'Edit', edit_subject_path(@subject) %> |
-<%= link_to 'Add Clocking', subject_clockings_path(@subject) %> |
+<%= link_to 'New Clocking', new_subject_clocking_path(@subject) %> |
 <%= link_to 'Back', subjects_path %>
