--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -11,13 +11,29 @@
 </p>
 
 <h2>Clockings</h2>
-<% for clocking in @subject.clockings %>
-    <ul>
-      <li><%= clocking.topic %></li>
-      <li><%= clocking.details %></li>
-      <li><%= clocking.duration %></li>
-  </ul>
-<% end %>
+  <table>
+  <thead>
+    <tr>
+      <th>Topic</th>
+      <th>Details</th>
+      <th>Duration</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <% for clocking in @subject.clockings %>
+      <tr>
+        <td><%= clocking.topic %></td>
+        <td><%= clocking.details %></td>
+        <td><%= clocking.duration %></td>
+        <td><%= clocking.subject.title %></td>
+        <td><%= link_to 'Edit Clocking', edit_subject_clocking_path(@subject, clocking) %></td>
+        <td><%= link_to 'Destroy Clocking', [@subject, clocking], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
 
 <%= link_to 'Edit', edit_subject_path(@subject) %> |
 <%= link_to 'New Clocking', new_subject_clocking_path(@subject) %> |
