--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<%= link_to 'New Clocking', new_subject_clocking_path(@subject) %>
 
 <p>
   <strong>Title:</strong>
