--- a/app/views/subjects/select.html.erb
+++ b/app/views/subjects/select.html.erb
@@ -19,7 +19,7 @@
     <% @subjects.each do |subject| %>
       <tr>
         <td><%= subject.title %></td>
-        <td><%= link_to 'Select', subject %></td>
+        <td><%= link_to 'Select', new_subject_clocking_path(subject_id: subject.id), method: :get %></td>
       </tr>
     <% end %>
   </tbody>
