Test the devise signin and signup

--- a/app/views/subjects/select.html.erb
+++ b/app/views/subjects/select.html.erb
@@ -6,6 +6,8 @@
 <p>Please Create the Subject your Clocking belongs to.</p>
 <p>You may choose External if the clocking is not for a subject</p>
 
+<%= link_to 'New Subject', new_subject_path %>
+
 <table>
   <thead>
     <tr>
