--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -14,6 +14,7 @@
       <tr>
         <td><%= subject.title %></td>
         <td><%= subject.description %></td>
+        <td><%= image_tag(subject.icon) if subject.icon.attached? %></td>
         <td><%= link_to 'Show', subject %></td>
         <td><%= link_to 'Edit', edit_subject_path(subject) %></td>
         <td><%= link_to 'Destroy', subject, method: :delete, data: { confirm: 'Are you sure?' } %></td>
