--- a/app/views/subjects/_form.html.erb
+++ b/app/views/subjects/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_field :description %>
   </div>
 
+  <div class="field">
+    <%= form.label :icon %>
+    <%= form.file_field :icon %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
