Attach images to subjects and clockings except for external

--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -5,6 +5,7 @@
       <p><%= clocking.topic %></p>
       <p><%= clocking.details %></p>
       <p><%= clocking.duration %></p>
+      <p><%= image_tag(subject.icon) if subject.icon.attached? %></p>
     <%end%>
   <% end %>
 <%end%>
@@ -16,6 +17,7 @@
       <p><%= clocking.topic %></p>
       <p><%= clocking.details %></p>
       <p><%= clocking.duration %></p>
+      <p><%= image_tag(subject.icon) if subject.icon.attached? %></p>
     <%end%>
   <% end %>
 <% end %>
