--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,7 +14,7 @@
  *= require_self
  */
 
-@import "bootstrap";
+// @import "bootstrap";
 
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {
