Add default image for external clockings

--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -119,7 +119,8 @@
                 <p><%= clocking.topic %></p>
                 <p><%= clocking.details %></p>
                 <p><%= clocking.duration %></p>
-                <p><%= image_tag subject.icon.variant(resize: '500x500') %></p>
+                <%# <p><%= image_tag subject.icon.variant(resize: '500x500') </p> %>
+                <p><%= image_tag "default.jpg" %></p>
               <%end%>
             <% end %>
           <%end%>
