--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -2,24 +2,24 @@
   <div class="row content">  
 
     <div class="col-md-3 sidenav hidden-xs">
-      <%# <nav class="navbar bg-light"> %>
-        <%# <!-- Links --> %>
-        <%# <ul class="navbar-nav"> %>
-          <%# <li class="nav-item"> %>
-            <%# <a class="nav-link" href="#">LOGO</a> %>
-          <%# </li> %>
-          <%# <li class="nav-item"> %>
-            <%# <a class="nav-link" href="#">Link 1</a> %>
-          <%# </li> %>
-          <%# <li class="nav-item"> %>
-            <%# <a class="nav-link" href="#">Link 2</a> %>
-          <%# </li> %>
-          <%# <li class="nav-item"> %>
-            <%# <a class="nav-link" href="#">Link 3</a> %>
-          <%# </li> %>
-        <%# </ul><br> %>
-      <%# </nav> %>
-      <nav class="navbar navbar-toggleable-md navbar-light bg-light">
+      <nav class="navbar bg-light d-none d-md-block">
+        <!-- Links -->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">LOGO</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link 1</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link 2</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Link 3</a>
+          </li>
+        </ul><br>
+      </nav>
+      <nav class="navbar navbar-toggleable-md navbar-light bg-light d-md-none">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -54,55 +54,79 @@
     <br>
     
     <div class="col-md-9">
-      <div class="row">
-        <div class="col-md-3">
-          <div class="well">
-            <h4>Users</h4>
-            <p>1 Million</p> 
+      <div class="dash d-none d-md-block">
+        <div class="row">
+          <div class="col-md-3">
+            <div class="chunk">
+              <h4 class="dash-h">Users</h4>
+              <p class="dash-p">1 Million</p> 
+            </div>
           </div>
-        </div>
-        <div class="col-md-3">
-          <div class="well">
-            <h4>Pages</h4>
-            <p>100 Million</p> 
+          <div class="col-md-3">
+            <div class="chunk">
+              <h4 class="dash-h">Pages</h4>
+              <p class="dash-p">100 Million</p> 
+            </div>
           </div>
-        </div>
-        <div class="col-md-3">
-          <div class="well">
-            <h4>Sessions</h4>
-            <p>10 Million</p> 
+          <div class="col-md-3">
+            <div class="chunk">
+              <h4 class="dash-h">Sessions</h4>
+              <p class="dash-p">10 Million</p> 
+            </div>
           </div>
-        </div>
-        <div class="col-md-3">
-          <div class="well">
-            <h4>Bounce</h4>
-            <p>30%</p> 
+          <div class="col-md-3">
+            <div class="chunk">
+              <h4 class="dash-h">Bounce</h4>
+              <p class="dash-p">30%</p> 
+            </div>
           </div>
         </div>
       </div>
-      <div class="media">
+      <div class="chunk container pt-3">
+        <div class="row">
+          <div class="clock-type col-10">
+            <h4>All Clockings</h4>
+            <p>subject based clockings</p>
+          </div>
+          <div class="clock-total col-2 mt-3 text-center">
+            45 Hours
+          </div>
+        </div>
+      </div>
       <% @subjects.each do |subject| %>
         <% subject.clockings.each do |clocking| %>
           <%if subject.title != "External"%>
-            <p><%= image_tag subject.icon.variant(resize: '100x100') %></p>
-            <div class="media-body">
-              <h5 class="mt-0"><%= clocking.topic %></h5>
-              <p><%= clocking.details %></p>
-              <div class="dtn">
-                <p><%= clocking.duration %></p>
+            <div class="card mb-3">
+              <div class="row no-gutters">
+                <div class="col-3 card-wrap">
+                  <%= image_tag(subject.icon.variant(extent: "10:7"), class: "card-img") %>
+                </div>
+                <div class="col-7">
+                  <div class="card-body py-1">
+                    <h5 class="card-title m-0"><%= clocking.topic %></h5>
+                    <p class="card-text mb-2">
+                      <small class="text-muted">SUBJECT: </small>
+                      <small class="text-muted">Last updated 3 mins ago</small>
+                    </p>
+                    <p class="card-detail mb-2"><%= clocking.details %></p>
+                  </div>
+                </div>
+                <div class="col-2">
+                  <h5 class="row justify-content-center m-3"><%= clocking.duration %> Hours</h5>
+                </div>
               </div>
             </div>
           <%end%>
         <% end %>
       <%end%>
-      </div>
-      <div class="well container">
+      
+      <div class="chunk container">
         <h4>All Clockings</h4>
         <p>All your subject based clockings</p>
       </div>
       <div class="row">
         <div class="col-md-4">
-          <div class="well">
+          <div class="chunk">
           <% @subjects.each do |subject| %>
             <% subject.clockings.each do |clocking| %>
               <%if subject.title != "External"%>
@@ -122,13 +146,13 @@
           </div>
         </div>
       </div>
-      <div class="well container">
+      <div class="chunk container">
         <h4>External Clockings</h4>
         <p>All your non subject based clockings</p>
       </div>
       <div class="row">
         <div class="col-md-4">
-          <div class="well">
+          <div class="chunk">
           <% @subjects.each do |subject| %>
             <% subject.clockings.each do |clocking| %>
               <%if subject.title == "External"%>
