Add links to the nav menu

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,16 @@
   </head>
 
   <body>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+    <% if flash[:notice] %>
+    	<div class="alert alert-success" role="alert">
+    		<p class="notice"><%= notice %></p>
+    	</div>
+    <% end %>
+    <% if flash[:alert] %>
+    	<div class="alert alert-danger" role="alert">
+    		<p class="alert"><%= alert %></p>
+    	</div>
+    <% end %>
     <%= yield %>
   </body>
 </html>
