--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -1,5 +1,5 @@
-<div class="">
-  <h1>Clockings</h1>
+<div class="d-none d-md-block">
+  <h1 class="p-3 text-center">Clockings</h1>
 </div>
 
 <div class="container-fluid">
@@ -33,10 +33,9 @@
       <div class="chunk container pt-3">
         <div class="row">
           <div class="clock-type col-10">
-            <h4>All Clockings</h4>
-            <p>subject based clockings</p>
+            <h4>subject based clockings</h4>
           </div>
-          <div class="clock-total col-2 mt-3 text-center">
+          <div class="clock-total col-2 text-center">
             45 Hours
           </div>
         </div>
