Add styling to the clockings and subjects pages

--- a/app/views/subjects/_nav.html.erb
+++ b/app/views/subjects/_nav.html.erb
@@ -6,6 +6,9 @@
         <a class="nav-link" href="#">LOGO</a>
       </li>
       <li class="nav-item">
+        <%= link_to 'All Clockings', root_path, class: 'nav-link' %>
+      </li>
+      <li class="nav-item">
         <%= link_to 'All Subjects', subjects_path, class: 'nav-link' %>
       </li>
       <li class="nav-item">
