--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -95,6 +95,10 @@
   width: 90%;
 }
 
+.remove-external {
+  display: none;
+}
+
 /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
 .row.content {
   height: 550px;
