--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -16,7 +16,7 @@
             <div class="col-3 card-wrap">
               <%if @subject.title != "External"%>
                 <%= image_tag(@subject.icon.variant(extent: "10:7"), class: "card-img") %>
-              <%elsif subject.title == "External"%>
+              <%elsif @subject.title == "External"%>
                 <%= image_tag("default.jpg", class: "card-img") %>
               <%end%>
             </div>
@@ -24,15 +24,16 @@
               <div class="card-body py-1">
                 <h5 class="card-title m-0"><%= clocking.topic %></h5>
                 <p class="card-text mb-2">
-                  <small class="text-muted">SUBJECT: </small>
-                  <small class="text-muted">Last updated 3 mins ago</small>
+                  <small class="text-muted">
+                    Created: <%= clocking.created_at.strftime("#{clocking.created_at.day.ordinalize} %B %Y") %>
+                  </small>
                 </p>
                 <p class="card-detail mb-2"><%= clocking.details %></p>
               </div>
             </div>
             <div class="col-2">
               <h5 class="row justify-content-center m-3"><%= clocking.duration %> Hours</h5>
-              <div class="act">
+              <div>
                 <span>
                   <%= link_to 'Edit', edit_subject_clocking_path(@subject, clocking) %>
                 </span>
