Refactor code plus move nav into layouts

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,23 +27,23 @@
 }
 
 .lt-gray-bg {
-  background: #f3f3f3;
+  background: #f8f9fa;
 }
 
-.red-clr {
-  color: #ec5242;
+.blue-clr {
+  color: #3778c2;
 }
 
-.red-bg {
-  background: #ec5242;
+.blue-bg {
+  background: #3778c2;
 }
 
-.black-clr {
-  color: #272131;
+.green-clr {
+  color: #5fb523;
 }
 
-.black-bg {
-  background: #272131;
+.green-bg {
+  background: #5fb523;
 }
 
 .lt-blue-clr {
