--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -1,5 +1,5 @@
 <div class="d-none d-md-block">
-  <h1 class="p-3 text-center">Clockings</h1>
+  <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr">Subject Clockings</h1>
 </div>
 
 <div class="container-fluid">
