--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,5 +1,5 @@
 <div class="d-none d-md-block">
-  <h1 class="p-3 text-center">
+  <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr">
     <%=@subject.title%> Clockings
   </h1>
 </div>
