--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,39 @@
     		<p class="alert"><%= alert %></p>
     	</div>
     <% end %>
+
+    <nav class="navbar navbar-toggleable-md navbar-light blue-bg d-md-none">
+      <strong><a class="font-20 lt-gray-clr" href="#">StudyMate</a></strong>
+      <button class="navbar-toggler lt-gray-clr" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="#">LOGO</a>
+          </li>
+          <li class="nav-item">
+            <%= current_student.username %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'All Clockings', root_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'All Subjects', subjects_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'External Clockings', external_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to 'New Clocking', select_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= render 'devise/menu/login_items' %>
+          </li>
+        </ul><br>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
