--- a/app/views/subjects/_nav.html.erb
+++ b/app/views/subjects/_nav.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-3 sidenav hidden-xs">
+<div class="col-md-3 hidden-xs py-3 py-md-0 px-0 blue-bg">
   <nav class="navbar bg-light d-none d-md-block">
     <!-- Links -->
     <ul class="navbar-nav">
@@ -21,25 +21,5 @@
         <%= render 'devise/menu/login_items' %>
       </li>
     </ul><br>
-  </nav>
-  <nav class="navbar navbar-toggleable-md navbar-light bg-light d-md-none">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item">
-          <%= link_to 'New Clocking', select_path, class: 'nav-link' %>
-        </li>
-      </ul>
-    </div>
   </nav>
 </div>
