--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -1,3 +1,7 @@
+<div class="d-none d-md-block">
+  <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr">External Clockings</h1>
+</div>
+
 <div class="container-fluid">
   <div class="row content">
 
