--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -36,7 +36,7 @@
             <h4>subject based clockings</h4>
           </div>
           <div class="clock-total col-2 text-center">
-            45 Hours
+            <%= count_clock %> Hours
           </div>
         </div>
       </div>
