--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -37,7 +37,8 @@
             <p>subject based clockings</p>
           </div>
           <div class="clock-total col-2 mt-3 text-center">
-            <%= clocking.duration %> Hours
+            <%# <%= clocking.duration %> 
+            <%= count_clock %>Hours
           </div>
         </div>
       </div>
