Count total number of external based clockings

--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -10,22 +10,28 @@
     <div class="col-md-9">
       <div class="dash d-none d-md-block">
         <div class="row">
-          <div class="col-md-4 text-center">
+          <div class="col-md-3 text-center">
             <div class="chunk">
               <h4 class="dash-h">Users</h4>
               <p class="dash-p">1 Million</p> 
             </div>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-3 text-center">
             <div class="chunk">
               <h4 class="dash-h">Pages</h4>
               <p class="dash-p">100 Million</p> 
             </div>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-3 text-center">
             <div class="chunk">
               <h4 class="dash-h">Sessions</h4>
               <p class="dash-p">10 Million</p> 
+            </div>
+            <div class="col-md-3 text-center">
+              <div class="chunk">
+                <h4 class="dash-h">Sessions</h4>
+                <p class="dash-p">10 Million</p> 
+              </div>
             </div>
           </div>
         </div>
@@ -36,7 +42,7 @@
             <h4>subject based clockings</h4>
           </div>
           <div class="clock-total col-2 text-center">
-            <%= count_clock %> Hours
+            <%= count_subject_clock %> Hours
           </div>
         </div>
       </div>
