--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -10,35 +10,40 @@
     <div class="col-md-9">
       <div class="dash d-none d-md-block">
         <div class="row">
-          <div class="col-md-4 text-center">
+          <div class="col-md-3 text-center">
             <div class="chunk">
               <h4 class="dash-h">Users</h4>
               <p class="dash-p">1 Million</p> 
             </div>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-3 text-center">
             <div class="chunk">
               <h4 class="dash-h">Pages</h4>
               <p class="dash-p">100 Million</p> 
             </div>
           </div>
-          <div class="col-md-4 text-center">
+          <div class="col-md-3 text-center">
             <div class="chunk">
               <h4 class="dash-h">Sessions</h4>
               <p class="dash-p">10 Million</p> 
             </div>
           </div>
+          <div class="col-md-3 text-center">
+           <div class="chunk">
+             <h4 class="dash-h">Sessions</h4>
+             <p class="dash-p">10 Million</p> 
+           </div>
+         </div>
         </div>
       </div>
       <div class="chunk container pt-3">
         <div class="row">
           <div class="clock-type col-10">
-            <h4>All Clockings</h4>
-            <p>subject based clockings</p>
+            <h4>All External Clockings</h4>
+            <p>Non subject based clockings</p>
           </div>
           <div class="clock-total col-2 mt-3 text-center">
-            <%# <%= clocking.duration %> 
-            <%= count_clock %>Hours
+            <%= count_external_clock %> Hours
           </div>
         </div>
       </div>
