Add statistics to the dashboard

--- a/app/views/subjects/external.html.erb
+++ b/app/views/subjects/external.html.erb
@@ -9,7 +9,7 @@
     
     <div class="col-md-9">
       <div class="dash d-none d-md-block">
-        <div class="row">
+        <div class="row mt-4">
           <div class="col-md-3 text-center">
             <div class="chunk">
               <h4 class="dash-h">Users</h4>
