--- a/app/views/subjects/all.html.erb
+++ b/app/views/subjects/all.html.erb
@@ -9,29 +9,29 @@
     
     <div class="col-md-9">
       <div class="dash d-none d-md-block">
-        <div class="row">
+        <div class="row mt-4">
           <div class="col-md-3 text-center">
             <div class="chunk">
-              <h4 class="dash-h">Users</h4>
-              <p class="dash-p">1 Million</p> 
+              <h4 class="dash-h">Total Subjects</h4>
+              <p class="dash-p"><%=@subjects.count%> subjects</p> 
             </div>
           </div>
           <div class="col-md-3 text-center">
             <div class="chunk">
-              <h4 class="dash-h">Pages</h4>
-              <p class="dash-p">100 Million</p> 
+              <h4 class="dash-h">Subject Clockings</h4>
+              <p class="dash-p"><%= count_subject_clock %> Hours</p> 
             </div>
           </div>
           <div class="col-md-3 text-center">
             <div class="chunk">
-              <h4 class="dash-h">Sessions</h4>
-              <p class="dash-p">10 Million</p> 
+              <h4 class="dash-h">External Clockings</h4>
+              <p class="dash-p"><%= count_external_clock %> Hours</p> 
             </div>
-            <div class="col-md-3 text-center">
-              <div class="chunk">
-                <h4 class="dash-h">Sessions</h4>
-                <p class="dash-p">10 Million</p> 
-              </div>
+          </div>
+          <div class="col-md-3 text-center">
+            <div class="chunk">
+              <h4 class="dash-h">Total Hours</h4>
+              <p class="dash-p"><%= total_hours %> Hours</p> 
             </div>
           </div>
         </div>
@@ -39,7 +39,7 @@
       <div class="chunk container pt-3">
         <div class="row">
           <div class="clock-type col-10">
-            <h4>subject based clockings</h4>
+            <h4>Subject based clockings</h4>
           </div>
           <div class="clock-total col-2 text-center">
             <%= count_subject_clock %> Hours
