--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,12 +11,12 @@
 
   <body>
     <% if flash[:notice] %>
-    	<div class="alert alert-success mb-0" role="alert">
+    	<div class="alert-success mb-0" role="alert">
     		<p class="notice"><%= notice %></p>
     	</div>
     <% end %>
     <% if flash[:alert] %>
-    	<div class="alert alert-danger mb-0" role="alert">
+    	<div class="alert-danger mb-0" role="alert">
     		<p class="alert"><%= alert %></p>
     	</div>
     <% end %>
