--- a/app/views/subjects/select.html.erb
+++ b/app/views/subjects/select.html.erb
@@ -1,28 +1,27 @@
-<h1>Select Subject for ypur Clocking</h1>
+<div class="d-none d-md-block">
+  <h1 class="p-3 text-center m-0 blue-bg lt-gray-clr">Select Subject</h1>
+</div>
 
-<p>Please select the Subject your Clocking belongs to</p>
-<p>You may choose External if the clocking is not for a subject</p>
+<div class="container-fluid">
+  <div class="row content">
 
-<p>Please Create the Subject your Clocking belongs to.</p>
-<p>You may choose External if the clocking is not for a subject</p>
+  <%= render 'subjects/nav' %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <div class="col-md-9">
 
-  <tbody>
-    <% @subjects.each do |subject| %>
-      <tr>
-        <td><%= subject.title %></td>
-        <td><%= link_to 'Select', new_subject_clocking_path(subject_id: subject.id), method: :get %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <p>Please select the Subject for your Clocking below or
+        <strong><%= link_to 'create a new Subject', new_subject_path%></strong>
+      </p>
 
-
+      <div class="select">
+        <% @subjects.each do |subject| %>
+          <ul class="list-group list-group-flush">
+            <li class="list-group-item">
+              <%= link_to subject.title, new_subject_clocking_path(subject_id: subject.id), method: :get %>
+            </li>
+          </ul>
+        <%end%>
+      </div>
+    </div>
+  </div>
+</div>
