--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,36 @@
-<h2>Sign up</h2>
+<div class="w-25 m-auto">
+<h2 class="text-center">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
+  <div class="form-group field">
     <%= f.label :username %><br />
-    <%= f.text_field :username, autofocus: true, autocomplete: "username" %>
+    <%= f.text_field :username, class: "form-control", autofocus: true, autocomplete: "username" %>
   </div>
 
-  <div class="field">
+  <div class="form-group field">
     <%= f.label :email %><br />
-    <%= f.email_field :email, autocomplete: "email" %>
+    <%= f.email_field :email, class: "form-control", autocomplete: "email" %>
   </div>
 
-  <div class="field">
+  <div class="form-group field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
     <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+    <%= f.password_field :password, class: "form-control", autocomplete: "new-password" %>
   </div>
 
-  <div class="field">
+  <div class="form-group field">
     <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= f.password_field :password_confirmation, class: "form-control", autocomplete: "new-password" %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="form-group actions">
+    <%= f.submit "Sign up", class: "btn btn-primary btn-lg btn-block" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
